--- a/popup/popup.scss
+++ b/popup/popup.scss
@@ -82,6 +82,15 @@ body {
   right: 0px;
 }
 
+:root{
+  --tags-border-color       : #00D1B2 !important;
+  --tags-hover-border-color : #00D1B2 !important;
+  --tags-focus-border-color : rgba(76, 175, 80, 0) !important;
+  --tagify-dd-color-primary : #00D1B2 !important;
+  --tagify-dd-color-primary:rgba(76, 175, 80, 0)  !important;
+  --tagify-dd-bg-color: #f8f8ff !important;
+}
+
 // Tagify show tags below input field
 .tagify--outside {
   border: 0;
