--- a/content/content.css
+++ b/content/content.css
@@ -14,36 +14,35 @@
     zoom: 1;
   }
 
-
-body {
+body.darkMode {
   -webkit-filter: invert(100%);
   filter: invert(100%);
 }
 
-img, video,
-:not(object):not(body)>embed,
-object,
-svg image,
-[style*="background:url"],
-[style*="background-image:url"],
-[style*="background: url"],
-[style*="background-image: url"],
-[background],
-twitterwidget,
-.sr-reader,
-.sr-backdrop {
+body.darkMode img, body.darkMode video,
+body.darkMode :not(object):not(body)>embed,
+body.darkMode object,
+body.darkMode svg image,
+body.darkMode [style*="background:url"],
+body.darkMode [style*="background-image:url"],
+body.darkMode [style*="background: url"],
+body.darkMode [style*="background-image: url"],
+body.darkMode [background],
+body.darkMode twitterwidget,
+body.darkMode .sr-reader,
+body.darkMode .sr-backdrop {
   -webkit-filter: invert(100%);
   filter: invert(100%);
 }
 
-[style*="background:url"] *,
-[style*="background-image:url"] *,
-[style*="background: url"] *,
-[style*="background-image: url"] *,
-input,
-[background] *,
-img[src^="https://s0.wp.com/latex.php"],
-twitterwidget .NaturalImage-image {
+body.darkMode [style*="background:url"] *,
+body.darkMode [style*="background-image:url"] *,
+body.darkMode [style*="background: url"] *,
+body.darkMode [style*="background-image: url"] *,
+body.darkMode input,
+body.darkMode [background] *,
+body.darkMode img[src^="https://s0.wp.com/latex.php"],
+body.darkMode twitterwidget .NaturalImage-image {
   -webkit-filter: invert(100%);
   filter: invert(100%);
 }
