ci: replace github linter by local eslint command

--- a/content/content.css
+++ b/content/content.css
@@ -20,7 +20,8 @@
   position: relative !important;
 }
 
-.dim:not(:hover) > * > * > * {
+.dim:not(:hover) >,
+* > * > * {
   max-height: 150px !important;
   overflow: hidden !important;
 }
