--- a/content/content.css
+++ b/content/content.css
@@ -18,6 +18,7 @@
   filter: alpha(opacity=5) !important;
   zoom: 1 !important;
   position: relative !important;
+  box-shadow: none;
 }
 
 .dim:not(:hover) > * > * > * {
@@ -55,38 +56,4 @@
   padding-left: 2rem !important;
   padding-right: 2rem !important;
   width: 100% !important;
-}
-
-body.darkMode {
-  -webkit-filter: invert(100%);
-  filter: invert(100%);
-}
-
-body.darkMode img,
-body.darkMode video,
-body.darkMode :not(object):not(body) > embed,
-body.darkMode object,
-body.darkMode svg image,
-body.darkMode [style*='background:url'],
-body.darkMode [style*='background-image:url'],
-body.darkMode [style*='background: url'],
-body.darkMode [style*='background-image: url'],
-body.darkMode [background],
-body.darkMode twitterwidget,
-body.darkMode .sr-reader,
-body.darkMode .sr-backdrop {
-  -webkit-filter: invert(100%);
-  filter: invert(100%);
-}
-
-body.darkMode [style*="background:url"] *,
-body.darkMode [style*="background-image:url"] *,
-body.darkMode [style*="background: url"] *,
-body.darkMode [style*="background-image: url"] *,
-body.darkMode input,
-body.darkMode [background] *,
-body.darkMode img[src^="https://s0.wp.com/latex.php"],
-body.darkMode twitterwidget .NaturalImage-image {
-  -webkit-filter: invert(100%);
-  filter: invert(100%);
 }
